--- a/woocommerce-vi_VN.po
+++ b/woocommerce-vi_VN.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WooCommerce v2.0.9\n"
 "Report-Msgid-Bugs-To: https://github.com/woothemes/woocommerce/issues\n"
 "POT-Creation-Date: 2013-11-26 15:19:04+00:00\n"
-"PO-Revision-Date: 2013-12-20 19:55+0100\n"
+"PO-Revision-Date: 2013-12-21 02:12+0100\n"
 "Last-Translator: Thach Pham <ezit92@gmail.com>\n"
 "Language-Team: \n"
 "Language: vi_VN\n"
@@ -7473,9 +7473,8 @@ msgstr ""
 
 # @ woocommerce
 #: templates/checkout/form-checkout.php:51
-#, fuzzy
 msgid "Your order"
-msgstr "Đơn hàng mới"
+msgstr "Đơn hàng của bạn"
 
 # @ woocommerce
 #: templates/checkout/form-coupon.php:17
@@ -7568,9 +7567,8 @@ msgstr "Cập nhật giỏ"
 
 # @ woocommerce
 #: templates/checkout/review-order.php:168
-#, fuzzy
 msgid "Place order"
-msgstr "Đơn hàng mới"
+msgstr "Đặt hàng"
 
 #: templates/checkout/review-order.php:175
 msgid "I have read and accept the"
