--- a/woocommerce-vi_VN.po
+++ b/woocommerce-vi_VN.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WooCommerce v2.0.9\n"
 "Report-Msgid-Bugs-To: https://github.com/woothemes/woocommerce/issues\n"
 "POT-Creation-Date: 2013-11-26 15:19:04+00:00\n"
-"PO-Revision-Date: 2013-12-21 03:00+0100\n"
+"PO-Revision-Date: 2013-12-21 21:26+0100\n"
 "Last-Translator: Thach Pham <ezit92@gmail.com>\n"
 "Language-Team: \n"
 "Language: vi_VN\n"
@@ -5150,16 +5150,14 @@ msgstr ""
 
 # @ woocommerce
 #: includes/class-wc-post-types.php:283
-#, fuzzy
 msgctxt "Admin menu name"
 msgid "Orders"
-msgstr "Mã đơn hàng"
+msgstr "Đơn hàng"
 
 # @ woocommerce
 #: includes/class-wc-post-types.php:293
-#, fuzzy
 msgid "Orders"
-msgstr "Mã đơn hàng"
+msgstr "Các đơn "
 
 # @ woocommerce
 #: includes/class-wc-post-types.php:294 templates/myaccount/my-orders.php:32
@@ -5168,9 +5166,8 @@ msgstr ""
 
 # @ woocommerce
 #: includes/class-wc-post-types.php:295
-#, fuzzy
 msgid "Add Order"
-msgstr "Đơn hàng của bạn"
+msgstr "Thêm đơn hàng"
 
 # @ woocommerce
 #: includes/class-wc-post-types.php:296
@@ -5270,9 +5267,8 @@ msgstr ""
 
 # @ woocommerce
 #: includes/class-wc-post-types.php:342
-#, fuzzy
 msgid "No Coupons found"
-msgstr "Không tìm thấy file."
+msgstr "Không tìm thấy mã giảm "
 
 #: includes/class-wc-post-types.php:343
 msgid "No Coupons found in trash"
